--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
   "dependencies": {
     "@types/node": "^17.0.25",
     "class-transformer": "^0.5.1",
-    "decapi": "^2.0.0-beta.4",
+    "decapi": "^2.0.0-beta.5",
     "fastify": "^3.28.0",
     "graphql": "^16.3.0",
     "mercurius": "^9.3.6",
-    "ts-node": "^10.7.0"
+    "minifaker": "^1.34.0",
+    "nanoid": "^3.3.3"
   },
   "devDependencies": {
     "husky": "^7.0.4",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
     "ttypescript": "^1.5.13",
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "start": "ts-node -C ttypescript index.ts"
+    "start": "ts-node -C ttypescript index.ts",
+    "dev": "ts-node-dev -C ttypescript index.ts"
   },
   "husky": {
     "hooks": {
