--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^3.12.0",
     "@types/node": "^17.0.25",
     "class-transformer": "^0.5.1",
-    "decapi": "^2.0.0-beta.5",
+    "decapi": "^2.0.0-beta.8",
     "fastify": "^3.28.0",
     "graphql": "^16.3.0",
     "mercurius": "^9.3.6",
@@ -17,14 +18,20 @@
     "husky": "^7.0.4",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
+    "rollup-plugin-typescript2": "^0.31.2",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "vitest": "^0.9.4"
+  },
+  "resolutions": {
+    "graphql": "^16.3.0"
   },
   "scripts": {
-    "start": "ts-node -C ttypescript index.ts",
-    "dev": "ts-node-dev -C ttypescript index.ts"
+    "start": "ts-node -C ttypescript app.ts",
+    "dev": "ts-node-dev -C ttypescript app.ts",
+    "test": "vitest"
   },
   "husky": {
     "hooks": {
