--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ESNext",
     "lib": ["ES2017"],
     "target": "ES2018",
-    "types": [
-      "node"
-    ],
+    "types": ["node"],
+    "moduleResolution": "node",
     "strictNullChecks": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
