--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "husky": "^7.0.4",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
     "rollup-plugin-typescript2": "^0.31.2",
@@ -29,6 +31,7 @@
     "graphql": "^16.3.0"
   },
   "scripts": {
+    "postinstall": "patch-package",
     "start": "ts-node -C ttypescript app.ts",
     "dev": "ts-node-dev -C ttypescript app.ts",
     "test": "vitest"
