--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^17.0.25",
     "class-transformer": "^0.5.1",
     "decapi": "^2.0.0-beta.5",
     "fastify": "^3.28.0",
@@ -14,17 +13,23 @@
     "nanoid": "^3.3.3"
   },
   "devDependencies": {
+    "@types/node": "^17.0.25",
+    "@types/jest": "^27.4.0",
     "husky": "^7.0.4",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3"
   },
   "scripts": {
     "start": "ts-node -C ttypescript index.ts",
-    "dev": "ts-node-dev -C ttypescript index.ts"
+    "dev": "ts-node-dev -C ttypescript index.ts",
+    "w": "jest --watch",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
