--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "nanoid": "^3.3.3"
   },
   "devDependencies": {
-    "@types/node": "^17.0.25",
     "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.25",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
+    "proxy-date": "^0.1.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.6.3",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3"
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "start": "ts-node -C ttypescript index.ts",
