--- a/package.json
+++ b/package.json
@@ -1,34 +1,33 @@
 {
   "name": "startup-stage-checklist-api",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "class-transformer": "^0.5.1",
-    "decapi": "^2.0.0-beta.5",
-    "fastify": "^3.28.0",
-    "graphql": "^16.3.0",
-    "mercurius": "^9.3.6",
-    "minifaker": "^1.34.0",
-    "nanoid": "^3.3.3"
+    "decapi": "^2.0.5",
+    "fastify": "^4.1.0",
+    "graphql": "^16.5.0",
+    "mercurius": "^10.0.0",
+    "minifaker": "^1.34.1",
+    "nanoid": "^4.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.25",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "prettier": "^2.6.2",
+    "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "husky": "^8.0.1",
+    "jest": "^28.1.1",
+    "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "proxy-date": "^0.1.1",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.1",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.6.3"
+    "typescript": "^4.7.4"
   },
   "scripts": {
-    "start": "ts-node -C ttypescript index.ts",
-    "dev": "ts-node-dev -C ttypescript index.ts",
+    "start": "ts-node-esm -C ttypescript --experimental-specifier-resolution=node index.ts",
     "w": "jest --watch",
     "test": "jest"
   },
