--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^3.12.0",
     "@types/node": "^17.0.25",
@@ -31,9 +32,7 @@
     "graphql": "^16.3.0"
   },
   "scripts": {
-    "postinstall": "patch-package",
-    "start": "ts-node -C ttypescript app.ts",
-    "dev": "ts-node-dev -C ttypescript app.ts",
+    "start": "ts-node-esm -C ttypescript --experimental-specifier-resolution=node app.ts",
     "test": "vitest"
   },
   "husky": {
