--- a/package.json
+++ b/package.json
@@ -5,31 +5,31 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^3.12.0",
-    "@types/node": "^17.0.25",
+    "@prisma/client": "^4.0.0",
+    "@types/node": "^18.0.3",
     "class-transformer": "^0.5.1",
-    "decapi": "^2.0.0-beta.8",
-    "fastify": "^3.28.0",
-    "graphql": "^16.3.0",
-    "mercurius": "^9.3.6",
-    "minifaker": "^1.34.0",
-    "nanoid": "^3.3.3"
+    "decapi": "^2.0.8",
+    "fastify": "^4.2.1",
+    "graphql": "^16.5.0",
+    "mercurius": "^10.1.0",
+    "minifaker": "^1.34.1",
+    "nanoid": "^4.0.0"
   },
   "devDependencies": {
-    "husky": "^7.0.4",
+    "husky": "^8.0.1",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "rollup-plugin-typescript2": "^0.31.2",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "ts-node": "^10.8.2",
+    "ts-node-dev": "^2.0.0",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.6.3",
-    "vitest": "^0.9.4"
+    "typescript": "^4.7.4",
+    "vitest": "^0.18.0"
   },
   "resolutions": {
-    "graphql": "^16.3.0"
+    "graphql": "^16.5.0"
   },
   "scripts": {
     "start": "ts-node-esm -C ttypescript --experimental-specifier-resolution=node app.ts",
