--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "class-transformer": "^0.5.1",
     "decapi": "^2.0.8",
     "fastify": "^4.2.1",
-    "graphql": "^16.5.0",
+    "graphql": "npm:graphql-esm@^16.5.0",
     "mercurius": "^10.1.0",
     "minifaker": "^1.34.1",
     "nanoid": "^4.0.0"
   },
   "devDependencies": {
     "husky": "^8.0.1",
-    "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
@@ -27,9 +26,6 @@
     "ttypescript": "^1.5.13",
     "typescript": "^4.7.4",
     "vitest": "^0.18.0"
-  },
-  "resolutions": {
-    "graphql": "^16.5.0"
   },
   "scripts": {
     "start": "ts-node-esm -C ttypescript --experimental-specifier-resolution=node app.ts",
