--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "ts-node-dev": "^2.0.0",
     "ttypescript": "^1.5.13",
     "typescript": "^4.7.4",
-    "vitest": "^0.18.1"
+    "vite": "^3.0.2",
+    "vite-plugin-node": "^1.0.0",
+    "vitest": "^0.19.0"
   },
   "scripts": {
     "start": "ts-node-esm -C ttypescript --experimental-specifier-resolution=node app.ts",
